tests/neg/i25183.scala
class Counter(private var count: Int): // error
  def count_=(newCount: Int) = this.count = newCount
